# vkdt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
cmake/: FindAVCodec.cmake  FindAVFormat.cmake  FindAVUtil.cmake
ext/: Makefile
src/: CMakeLists.txt  Makefile
src/cli/: CMakeLists.txt
src/core/: CMakeLists.txt  fs.h  signal.h
src/db/: CMakeLists.txt  db.c  db.h  thumbnails.c
src/fit/: CMakeLists.txt
src/gui/: CMakeLists.txt  flat.mk  gui.c  hotkey.hh  imconfig_user.h  imnodes.cc  imnodes.h  imnodes_internal.h  render.cc  render_lighttable.cc  render_nodes.cc
src/gui-ng/: CMakeLists.txt  engine.h  enigne.cc  main.cc
src/pipe/: CMakeLists.txt  alloc.c  global.c
src/pipe/modules/: CMakeLists.txt
src/pipe/modules/align/: flat.mk
src/pipe/modules/blend/: flat.mk
src/pipe/modules/ciediag/: CMakeLists.txt
src/pipe/modules/cnn/: flat.mk
src/pipe/modules/colour/test/: Makefile
src/pipe/modules/deconv/: flat.mk
src/pipe/modules/i-bc1/: CMakeLists.txt
src/pipe/modules/i-geo/: CMakeLists.txt  flat.mk
src/pipe/modules/i-geo/corona/: prims.c
src/pipe/modules/i-jpg/: flat.mk
src/pipe/modules/i-jpglst/: CMakeLists.txt  flat.mk
src/pipe/modules/i-lut/: flat.mk
src/pipe/modules/i-mlv/: flat.mk
src/pipe/modules/i-pfm/: flat.mk
src/pipe/modules/i-raw/: flat.mk  main.cc
src/pipe/modules/i-v4l2/: CMakeLists.txt
src/pipe/modules/i-vid/: CMakeLists.txt
src/pipe/modules/llap/: flat.mk
src/pipe/modules/menon/: flat.mk
src/pipe/modules/nprof/: CMakeLists.txt  flat.mk
src/pipe/modules/o-bc1/: flat.mk  main.c
src/pipe/modules/pick/: CMakeLists.txt  flat.mk
src/pipe/modules/quake/: CMakeLists.txt  flat.mk
src/pipe/modules/svgf/: flat.mk
src/pipe/modules/svgf2/: flat.mk
src/qvk/: CMakeLists.txt  qvk.c
src/snd/: CMakeLists.txt
src/tools/spec/: Makefile
